--- a/MY PORTFOLIO/style.css
+++ b/MY PORTFOLIO/style.css
@@ -229,6 +229,7 @@ body {
         color: #f8f8f9;
         font-weight: 300;
         width: 42ch;
+        font-size: 15px;
     }
     .main-heading {
         color: #f8f8f9;
