--- a/MY PORTFOLIO/style.css
+++ b/MY PORTFOLIO/style.css
@@ -56,8 +56,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 550px;
+    height: auto;
     text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
 }
 .main-heading {
     color: #f8f8f9;
@@ -191,6 +192,12 @@ body {
 }
 }
 @media only screen and (max-width: 576px) {
+    .main {
+        text-align: center;
+        margin-top: 0px;
+        padding: 0;
+        height: 80vh;
+    }
     .main-pic {
         width: 100%;
         height: 100%;
@@ -201,10 +208,6 @@ body {
         font-weight: lighter;
         font-size: 28px;
         line-height: 60px;
-    }
-    .main {
-        text-align: center;
-        margin-top: 80px;
     }
     .yellow {
         color: #ffc86b;
@@ -222,7 +225,8 @@ body {
 @media only screen and (max-width: 388px) {
     .main {
         padding: 0;
-        margin-top: 70px;
+        margin-top: 0px;
+        height: 60vh;
         overflow: hidden;
     }
     .main-paragraph {
