--- a/MY PORTFOLIO/style.css
+++ b/MY PORTFOLIO/style.css
@@ -53,8 +53,12 @@ body {
     color: rgb(255, 200, 107);
 }
 .main {
+    background-image: url(images/mybackground.png);
+    background-position: 85%;
+    background-repeat: no-repeat;
+    background-size: contain;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: auto;
     text-align: center;
@@ -134,6 +138,28 @@ body {
 .main-pic {
     width: 100%;
     height: 100%;
+    display: none;
+}
+.main-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+}
+.line {
+    height: 115px;
+    width: 3px;
+    background-color: #ffc86b;
+    margin: 0px auto;
+    margin-top: 365px;
+    display: block;
+}
+.contact {
+    color: #ffffff;
+    list-style: none;
+    padding: 0;
+    margin-top: 15px;
+    font-size: 25px;
     display: block;
 }
 @media only screen and (max-width: 992px) {
@@ -159,13 +185,6 @@ body {
     font-weight: 700;
     color: #ffc86b;
     }
-    .main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 550px;
-        text-align: start;
-    }
     .main-paragraph {
         color: #f8f8f9;
         font-weight: 300;
@@ -180,10 +199,11 @@ body {
 }
 .main {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: auto;
     padding-left: 12px;
+    text-align: start;
 }
 .main-paragraph {
     color: #f8f8f9;
@@ -197,6 +217,7 @@ body {
         margin-top: 0px;
         padding: 0;
         height: 80vh;
+        background-position: right;
     }
     .main-pic {
         width: 100%;
@@ -221,6 +242,26 @@ body {
         text-align: center;
         width: 45ch;
     }
+    .main-contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: end;
+    }
+    .line {
+        height: 115px;
+        width: 3px;
+        background-color: #ffc86b;
+        margin: 0px auto;
+        margin-top: 280px;
+    }
+    .contact {
+        color: #ffffff;
+        list-style: none;
+        padding: 0;
+        margin-top: 15px;
+        font-size: 25px;
+    }
 }
 @media only screen and (max-width: 388px) {
     .main {
@@ -228,6 +269,7 @@ body {
         margin-top: 0px;
         height: 60vh;
         overflow: hidden;
+        background-position: center;
     }
     .main-paragraph {
         color: #f8f8f9;
@@ -262,5 +304,27 @@ body {
         transition: .5s;
         color: var(--color);
         z-index: 0;
+    }
+    .main-contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: end;
+    }
+    .line {
+        height: 115px;
+        width: 3px;
+        background-color: #ffc86b;
+        margin: 0px auto;
+        margin-top: 365px;
+        display: none;
+    }
+    .contact {
+        color: #ffffff;
+        list-style: none;
+        padding: 0;
+        margin-top: 15px;
+        font-size: 25px;
+        display: none;
     }
 }
