--- a/MY PORTFOLIO/style.css
+++ b/MY PORTFOLIO/style.css
@@ -258,6 +258,84 @@ body {
 .CV:active {
     filter: brightness(.8);
 }
+.Assignment {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
+    width: 80%;
+    margin: 0px auto;
+    margin-bottom: 50px;
+    overflow-x: auto;
+    padding-block: 2rem;
+}
+.Assignment::-webkit-scrollbar {
+    height: 0.35rem;
+}
+.Assignment::-webkit-scrollbar-track {
+    background-color: #b6b7b7;
+    border-radius: 100vw;
+}
+.Assignment::-webkit-scrollbar-thumb {
+    background-color: #ffc86b;
+    border-radius: 100vw;
+}
+.check {
+    --color: #ffc86b;
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 2px solid #ffc86b;
+    height: 500px;
+    width: 350px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-top: 50px;
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .0s;
+    color: var(--color);
+    z-index: 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
+}
+.check::before,
+.button::after {
+    content: '';
+    display: block;
+    width: 440px;
+    height: 30px;
+    transform: translate(-10%, -100%);
+    position: absolute;
+    border-radius: 0%;
+    z-index: -1;
+    background-color: var(--color);
+    transition: 1s ease;
+}
+
+.check::before {
+    top: 545px;
+    left: 25px;
+}
+
+.check::after {
+    left: calc(100% + 10px);
+    top: calc(1000% + 10px);
+}
+
+.check:hover::before,
+.button:hover::after {
+    height: 800px;
+    width: 1000px;
+}
+
+.check:hover {
+    color: #34353a;
+}
+
+.check:active {
+    filter: brightness(.8);
+}
 @media only screen and (max-width: 992px) {
     .navbar {
         height: auto;
@@ -422,12 +500,15 @@ body {
 }
 @media only screen and (max-width: 388px) {
     .main {
-        padding: 0;
-        margin-top: 0px;
-        height: 73vh;
-        overflow: hidden;
-        background-position: center;
-    }
+    padding: 0;
+    margin-top: 0px;
+    height: 80vh;
+    background-size: cover;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    background-position: center;
+}
     .main-paragraph {
         color: #f8f8f9;
         font-weight: 300;
