--- a/MY PORTFOLIO/style.css
+++ b/MY PORTFOLIO/style.css
@@ -168,7 +168,7 @@ body {
 .about-me {
     display: flex;
     justify-content: space-evenly;
-    height: 100vh;
+    height: auto;
     width: 100%;
 }
 .about-pic {
@@ -258,18 +258,27 @@ body {
 .CV:active {
     filter: brightness(.8);
 }
-.Assignment {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 1rem;
-    width: 80%;
-    margin: 0px auto;
+.my-assignments {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    width: 100%;
     margin-bottom: 50px;
-    overflow-x: auto;
-    padding-block: 2rem;
+}
+.my-assignments-heading {
+    color: #f8f8f9;
+    font-size: 2.67rem;
+    font-weight: 700;
+    font-family: 'Times New Roman', Times, serif;
+    border-bottom: 3px solid #ffc86b;
+    width: 30%;
+    text-align: center;
+    line-height: 70px;
 }
 .Assignment::-webkit-scrollbar {
-    height: 0.35rem;
+    height: 0.75rem;
 }
 .Assignment::-webkit-scrollbar-track {
     background-color: #b6b7b7;
@@ -279,14 +288,37 @@ body {
     background-color: #ffc86b;
     border-radius: 100vw;
 }
-.check {
-    --color: #ffc86b;
+.Assignment {
+    display: grid;
+    grid-auto-flow: column;
+    width: 80%;
+    gap: 1rem;
+    overflow-x: scroll;
+    position: relative;
+    padding-bottom: 20px;
+}
+.Assignment::before {
+    content: "Current Assignment";
+    position: absolute;
+    font-family: arial;
+    font-weight: 500;
+    font-size: 1.1rem;
+    color: #ffc86b;
+    top: 24px;
+    left: 0px;
+}
+.Assignment>button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    --color: #31333b;
     font-weight: 500;
     text-transform: uppercase;
-    background-color: transparent;
+    background-color: #ffc86b;
     border: 2px solid #ffc86b;
-    height: 500px;
-    width: 272px;
+    height: 350px;
+    width: 280px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-top: 50px;
@@ -299,7 +331,7 @@ body {
     z-index: 0;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
 }
-.check::before,
+.Assignment>button::before,
 .button::after {
     content: '';
     display: block;
@@ -313,28 +345,111 @@ body {
     transition: 1s ease;
 }
 
-.check::before {
+.Assignment>button::before {
     top: 545px;
     left: 25px;
 }
 
-.check::after {
+.Assignment>button::after {
     left: calc(100% + 10px);
     top: calc(1000% + 10px);
 }
 
-.check:hover::before,
+.Assignment>button:hover::before,
 .button:hover::after {
     height: 800px;
     width: 1000px;
 }
 
-.check:hover {
-    color: #34353a;
+.Assignment>button:hover {
+    color: #ffc86b;
 }
-
-.check:active {
+.Assignment-pic4:hover {
+    display: none;
+}
+.Assignment>button:active {
     filter: brightness(.8);
+}
+.Assignment-pic1 {
+    width: 130px;
+}
+.Assignment-2::before {
+    top: -445px !important;
+    left: 25px !important;
+}
+.Assignment-2::before, .button::after {
+    transform: translate(-10%, 25%) !important;
+}
+.Assignment-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly !important;
+    align-items: center !important;
+    --color: #ffc86b;
+    font-weight: 500;
+    gap: 1.5rem;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 2px solid #ffc86b;
+    height: 350px;
+    width: 280px;
+    padding-top: 45px;
+    padding-bottom: 0px;
+    margin-top: 50px;
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: .0s;
+    color: var(--color);
+    z-index: 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
+}
+.Assignment-pic3 {
+    width: 200px;
+}
+.Assignment-pic4 {
+    width: 122px;
+}
+.Assignment-4::before {
+    top: -445px !important;
+    left: 25px !important;
+}
+.Assignment-4::before, .button::after {
+    transform: translate(-10%, 25%) !important;
+}
+.Assignment-5 {
+    justify-content: space-evenly !important;
+    align-items: center !important;
+}
+.Assignment-pic5 {
+    width: 220px;
+}
+.Assignment-6::before {
+    top: -445px !important;
+    left: 25px !important;
+}
+.Assignment-6::before, .button::after {
+    transform: translate(-10%, 25%) !important;
+}
+.Assignment-6-heading {
+    font-size: 4.3rem;
+    font-weight: 600;
+    line-height: 100px;
+}
+.Assignment-7-heading,.Assignment-11-heading {
+    font-size: 2.55rem;
+    font-weight: 600;
+}
+.Assignment-8::before {
+    top: -445px !important;
+    left: 25px !important;
+}
+.Assignment-8::before, .button::after {
+    transform: translate(-10%, 25%) !important;
+}
+.Assignment-pic8 {
+    width: 130px;
 }
 @media only screen and (max-width: 992px) {
     .navbar {
@@ -385,6 +500,16 @@ body {
 }
 .about-paragraph {
     width: 100%;
+}
+.my-assignments-heading {
+    color: #f8f8f9;
+    font-size: 2.67rem;
+    font-weight: 700;
+    font-family: 'Times New Roman', Times, serif;
+    border-bottom: 3px solid #ffc86b;
+    width: 50%;
+    text-align: center;
+    line-height: 70px;
 }
 }
 @media only screen and (max-width: 576px) {
@@ -497,6 +622,40 @@ body {
         margin-left: 0px;
         width: 100%;
     }
+    .my-assignments-heading {
+        color: #f8f8f9;
+        font-size: 2.67rem;
+        font-weight: 700;
+        font-family: 'Times New Roman', Times, serif;
+        border-bottom: 3px solid #ffc86b;
+        width: 70%;
+        text-align: center;
+        line-height: 50px;
+    }
+    .Assignment>button {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        --color: #31333b;
+        font-weight: 500;
+        text-transform: uppercase;
+        background-color: #ffc86b;
+        border: 2px solid #ffc86b;
+        height: 350px;
+        width: 208px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+        margin-top: 50px;
+        border-radius: 8px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        transition: .0s;
+        color: var(--color);
+        z-index: 0;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
+    }
 }
 @media only screen and (max-width: 388px) {
     .main {
@@ -575,5 +734,29 @@ body {
         width: 235px;
         text-align: center;
         line-height: 70px;
+    }
+    .Assignment>button {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        --color: #31333b;
+        font-weight: 500;
+        text-transform: uppercase;
+        background-color: #ffc86b;
+        border: 2px solid #ffc86b;
+        height: 350px;
+        width: 280px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+        margin-top: 50px;
+        border-radius: 8px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        transition: .0s;
+        color: var(--color);
+        z-index: 0;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
     }
 }
