footer done for portfolio

--- a/style.css
+++ b/style.css
@@ -572,7 +572,7 @@ a:hover {
 .skill-3 img {
     width: 70px;
 }
-.education {
+#education {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -580,7 +580,6 @@ a:hover {
     position: relative;
     background-color: #3d3e42;
     padding: 0px 12px;
-    padding-bottom: 50px;
 }
 .education-heading {
     position: absolute;
@@ -703,6 +702,70 @@ a:hover {
 .degree-heading-3 {
     font-size: 28.8px;
  }
+ .footer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 70px;
+    height: 40vh;
+    background-color: #3d3e42;
+}
+.footerul {
+    list-style: none;
+}
+.footerul>li>h1 {
+    font-size: 45px;
+}
+.linkheading {
+    color: #f8f8f9;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
+}
+.footerul1 {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #b6b7b7;
+    line-height: 35px;
+    padding: 0;
+    list-style: none;
+    cursor: pointer;
+}
+.footerul2 {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #b6b7b7;
+    line-height: 35px;
+    padding: 0;
+    list-style: none;
+    cursor: pointer;
+}
+.contactheading {
+    color: #f8f8f9;
+    font-weight: 700;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+.footerul3 {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #b6b7b7;
+    padding: 0;
+    line-height: 35px;
+    list-style: none;
+    cursor: pointer;
+}
+.social-networks {
+    display: flex;
+    font-size: 32px;
+    gap: 1rem;
+}
+.followheading {
+    color: #f8f8f9;
+    font-weight: 700;
+    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 15px;
+}
 @media only screen and (max-width: 992px) {
     .navbar {
         height: auto;
@@ -762,6 +825,9 @@ a:hover {
     width: 50%;
     text-align: center;
     line-height: 70px;
+}
+.footer {
+    height: auto;
 }
 }
 @media only screen and (max-width: 576px) {
@@ -907,6 +973,41 @@ a:hover {
         color: var(--color);
         z-index: 0;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 19px;
+    }
+    .footer {
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 70px;
+        height: auto;
+        background-color: #3d3e42;
+    }
+    .footerul {
+        margin-top: 20px;
+    }
+    .footerul1 {
+        font-size: 16px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #b6b7b7;
+        text-align: center;
+        line-height: 35px;
+        padding: 0;
+        list-style: none;
+        cursor: pointer;
+    }
+    .footerul2 {
+        font-size: 16px;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #b6b7b7;
+        line-height: 35px;
+        padding: 0;
+        list-style: none;      
+    }
+    .footerul3 {
+        text-align: center;
     }
 }
 @media only screen and (max-width: 388px) {
